@@ -4,6 +4,7 @@
 - API Addition: TiledDrawable: Align can be set to manipulate the alignment of the rendering (TiledDrawable#setAlign, TiledDrawable#getAlign)
 - API Addition: TiledDrawable#draw: Also available as a static function (with align) if you don't want to create an extra instance per texture region
 - Android: Removed mouse catching added on 1.12.0 due to unintended effects (see #7187).
+- Android: Fixed touch state inconsistency when touching screen with 3 fingers on some devices (see #7256)
 - iOS: Update to MobiVM 2.3.20
 - API Addition: Using "object" property in Tiled object now fetches MapObject being pointed to, and BaseTmxMapLoader includes method for fetching map where key is id and value is MapObject instance.
 - Update to LWJGL 3.3.3
